applied spotless changes to formate the java classes