@@ -1,6 +1,19 @@
 package uk.gov.hmcts.reform.bulkscan.services;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static uk.gov.hmcts.reform.bulkscan.constants.BulkScanConstants.APPLICANT_HOME_TELEPHONE_NUMBER;
+import static uk.gov.hmcts.reform.bulkscan.constants.BulkScanConstants.APPLICANT_MOBILE_TELEPHONE_NUMBER;
+import static uk.gov.hmcts.reform.bulkscan.constants.BulkScanConstants.MANDATORY_ERROR_MESSAGE;
+import static uk.gov.hmcts.reform.bulkscan.constants.BulkScanConstants.MISSING_FIELD_MESSAGE;
+import static uk.gov.hmcts.reform.bulkscan.utils.Constants.APPLICANT_1_FIRST_NAME;
+import static uk.gov.hmcts.reform.bulkscan.utils.Constants.APPLICANT_1_LAST_NAME;
+import static uk.gov.hmcts.reform.bulkscan.utils.TestResourceUtil.readFileFrom;
+
 import com.fasterxml.jackson.databind.ObjectMapper;
+import java.io.IOException;
+import java.util.Collections;
+import java.util.List;
 import org.json.JSONException;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -19,67 +32,75 @@ import uk.gov.hmcts.reform.bulkscan.model.ScannedDocuments;
 import uk.gov.hmcts.reform.bulkscan.model.Status;
 import uk.gov.hmcts.reform.bulkscan.utils.TestDataUtil;
 
-import java.io.IOException;
-import java.util.Collections;
-import java.util.List;
-
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static uk.gov.hmcts.reform.bulkscan.constants.BulkScanConstants.APPLICANT_HOME_TELEPHONE_NUMBER;
-import static uk.gov.hmcts.reform.bulkscan.constants.BulkScanConstants.APPLICANT_MOBILE_TELEPHONE_NUMBER;
-import static uk.gov.hmcts.reform.bulkscan.constants.BulkScanConstants.MANDATORY_ERROR_MESSAGE;
-import static uk.gov.hmcts.reform.bulkscan.constants.BulkScanConstants.MISSING_FIELD_MESSAGE;
-import static uk.gov.hmcts.reform.bulkscan.utils.Constants.APPLICANT_1_FIRST_NAME;
-import static uk.gov.hmcts.reform.bulkscan.utils.Constants.APPLICANT_1_LAST_NAME;
-import static uk.gov.hmcts.reform.bulkscan.utils.TestResourceUtil.readFileFrom;
-
 @ExtendWith(SpringExtension.class)
 @SpringBootTest
 @ActiveProfiles("test")
 class BulkScanC51ServiceTest {
 
-    @Autowired
-    BulkScanC51Service bulkScanValidationService;
+    @Autowired BulkScanC51Service bulkScanValidationService;
 
     private static final String C51_TRANSFORM_RESPONSE_PATH =
-        "classpath:response/bulk-scan-c51-transform-output.json";
-
+            "classpath:response/bulk-scan-c51-transform-output.json";
 
     @Test
     void testC51Success() {
-        BulkScanValidationRequest bulkScanValidationRequest = BulkScanValidationRequest.builder().ocrdatafields(
-                TestDataUtil.getC51Data()).build();
-        BulkScanValidationResponse res = bulkScanValidationService.validate(bulkScanValidationRequest);
+        BulkScanValidationRequest bulkScanValidationRequest =
+                BulkScanValidationRequest.builder()
+                        .ocrdatafields(TestDataUtil.getC51Data())
+                        .build();
+        BulkScanValidationResponse res =
+                bulkScanValidationService.validate(bulkScanValidationRequest);
         assertEquals(Status.SUCCESS, res.status);
     }
 
     @Test
     void testC51MandatoryErrorWhileDoingValidation() {
-        BulkScanValidationRequest bulkScanValidationRequest = BulkScanValidationRequest.builder().ocrdatafields(
-                TestDataUtil.getC51ErrorData()).build();
-        BulkScanValidationResponse res = bulkScanValidationService.validate(bulkScanValidationRequest);
+        BulkScanValidationRequest bulkScanValidationRequest =
+                BulkScanValidationRequest.builder()
+                        .ocrdatafields(TestDataUtil.getC51ErrorData())
+                        .build();
+        BulkScanValidationResponse res =
+                bulkScanValidationService.validate(bulkScanValidationRequest);
         assertEquals(Status.ERRORS, res.status);
-        assertTrue(res.getErrors().items.contains(String.format(MANDATORY_ERROR_MESSAGE, APPLICANT_1_FIRST_NAME)));
+        assertTrue(
+                res.getErrors()
+                        .items
+                        .contains(String.format(MANDATORY_ERROR_MESSAGE, APPLICANT_1_FIRST_NAME)));
     }
 
     @Test
     void testC51FieldMissingErrorWhileDoingValidation() {
-        BulkScanValidationRequest bulkScanValidationRequest = BulkScanValidationRequest.builder().ocrdatafields(
-                TestDataUtil.getC51ErrorData()).build();
-        BulkScanValidationResponse res = bulkScanValidationService.validate(bulkScanValidationRequest);
+        BulkScanValidationRequest bulkScanValidationRequest =
+                BulkScanValidationRequest.builder()
+                        .ocrdatafields(TestDataUtil.getC51ErrorData())
+                        .build();
+        BulkScanValidationResponse res =
+                bulkScanValidationService.validate(bulkScanValidationRequest);
         assertEquals(Status.ERRORS, res.status);
-        assertTrue(res.getErrors().items.contains(String.format(MISSING_FIELD_MESSAGE, APPLICANT_1_LAST_NAME)));
+        assertTrue(
+                res.getErrors()
+                        .items
+                        .contains(String.format(MISSING_FIELD_MESSAGE, APPLICANT_1_LAST_NAME)));
     }
 
     @Test
     void testC51ConditionalFieldMissingErrorWhileDoingValidation() {
-        List<String> conditionalFields = List.of(APPLICANT_HOME_TELEPHONE_NUMBER, APPLICANT_MOBILE_TELEPHONE_NUMBER);
-        BulkScanValidationRequest bulkScanValidationRequest = BulkScanValidationRequest.builder().ocrdatafields(
-            TestDataUtil.getC51ConditionalFieldErrorData()).build();
-        BulkScanValidationResponse res = bulkScanValidationService.validate(bulkScanValidationRequest);
+        List<String> conditionalFields =
+                List.of(APPLICANT_HOME_TELEPHONE_NUMBER, APPLICANT_MOBILE_TELEPHONE_NUMBER);
+        BulkScanValidationRequest bulkScanValidationRequest =
+                BulkScanValidationRequest.builder()
+                        .ocrdatafields(TestDataUtil.getC51ConditionalFieldErrorData())
+                        .build();
+        BulkScanValidationResponse res =
+                bulkScanValidationService.validate(bulkScanValidationRequest);
         assertEquals(Status.ERRORS, res.status);
-        assertTrue(res.getErrors().items.contains(String.format(BulkScanConstants.XOR_CONDITIONAL_FIELDS_MESSAGE,
-                                                                conditionalFields)));
+        assertTrue(
+                res.getErrors()
+                        .items
+                        .contains(
+                                String.format(
+                                        BulkScanConstants.XOR_CONDITIONAL_FIELDS_MESSAGE,
+                                        conditionalFields)));
     }
 
     @Test
@@ -87,20 +108,25 @@ class BulkScanC51ServiceTest {
 
         ObjectMapper mapper = new ObjectMapper();
         BulkScanTransformationResponse bulkScanTransformationResponse =
-            bulkScanValidationService.transform(BulkScanTransformationRequest
-                                                    .builder()
-                                                    .scannedDocuments(Collections.emptyList())
-                                                    .scannedDocuments(List.of(
-                                                        ScannedDocuments.builder()
-                                                            .scanDocument(ScanDocument.builder()
-                                                                              .url("url1")
-                                                                              .binaryUrl("binary_url1")
-                                                                              .filename("filename1")
-                                                                              .build())
-                                                            .build()))
-                                                    .ocrdatafields(TestDataUtil.getC51Data()).build());
+                bulkScanValidationService.transform(
+                        BulkScanTransformationRequest.builder()
+                                .scannedDocuments(Collections.emptyList())
+                                .scannedDocuments(
+                                        List.of(
+                                                ScannedDocuments.builder()
+                                                        .scanDocument(
+                                                                ScanDocument.builder()
+                                                                        .url("url1")
+                                                                        .binaryUrl("binary_url1")
+                                                                        .filename("filename1")
+                                                                        .build())
+                                                        .build()))
+                                .ocrdatafields(TestDataUtil.getC51Data())
+                                .build());
 
-        JSONAssert.assertEquals(readFileFrom(C51_TRANSFORM_RESPONSE_PATH),
-                                mapper.writeValueAsString(bulkScanTransformationResponse), true);
+        JSONAssert.assertEquals(
+                readFileFrom(C51_TRANSFORM_RESPONSE_PATH),
+                mapper.writeValueAsString(bulkScanTransformationResponse),
+                true);
     }
 }
